draft version of tooltip

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>tooltip view</title>
-<link rel="stylesheet" href="tooltipView.css">
+<meta charset="UTF-8">
+<title>tooltip</title>
 </head>
 <body>
     <div id="box1" style="position: absolute; top: 5px; left: 5px; border: 1px solid black; width: 20px; height:20px;" ></div>
@@ -19,5 +19,5 @@
     <div id="box9" style="position: absolute; top: 30%; left: 30%; border: 1px solid black; width: 20px; height:20px;" ></div>
     <div id="box10" style="position: absolute; bottom: 30%; left: 30%; border: 1px solid black; width: 20px; height:20px;" ></div>
 </body>
-<script src="tooltipView.js"></script>
+<script src="gf-tooltip.js"></script>
 </html>
